# NTHU_GPA_Assignment3_GPUDrivenRendering

./: CMakeLists.txt  README.md
asset/shader/: oglCullingComputeShader.glsl  oglFragmentShader.glsl  oglVertexShader.glsl
include/: DynamicSceneObject.hpp  InfinityPlane.h  InfinityPlane.hpp  MixModel.hpp  MyImGuiPanel.hpp  MyMovingTrack.h  MyMovingTrack.hpp  MyPoissonSample.hpp  SceneManager.h  SceneManager.hpp  SceneRenderer.h  SceneRenderer.hpp  Shader.hpp  ViewFrustumSceneObject.hpp  camera.hpp  common.hpp  mesh.hpp  model.hpp  texture.hpp
include/glad/: glad.c
src/: DynamicSceneObject.cpp  InfinityPlane.cpp  MyImGuiPanel.cpp  SceneRenderer.cpp  Shader.cpp  ViewFrustumSceneObject.cpp  main.cpp  sample.cpp.tmp
